# YouTube-Monitoring-App-Rust-Iced

./: .gitignore  Cargo.toml  README.md  TODOS.md  incorrect_list_users.json  list_users.json
.github/workflows/: build-yt-monitor.yml
src/: circle_mod.rs  main.rs  render_cards.rs  yt_api_sample.rs  yt_monitor.rs
test_assets/: empty_data.json  more_data.json  sample_data.json
