[package]
name = "new-krs-theme-choose"
version = "0.1.0"
authors = ["Kushashwa Ravi Shrimali <kushashwaravishrimali@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { features = ["image", "debug"] }
iced_native = "0.7"
itertools = "0.10.5"
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.149", features = ["derive"] }
