[package]
name = "new-krs-theme-choose"
version = "0.1.0"
authors = ["Kushashwa Ravi Shrimali <kushashwaravishrimali@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "*", features = ["image", "debug"] }
iced_core = "*"
iced_native = "*"
itertools = "*"
serde_json = "*"
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
